@@ -1,3 +1,4 @@
+1/13/14 Solutions: move expand/collapse bar into SolutionsGraphNode
 1/9/14 Custom: add expand/collapse feature to pH meter
 1/9/14 generalize ExpandCollapseBar so that it title can be any scenery.Node
 1/9/14 move expand/collapse bar instance into SolutionsPHMeterNode
